# rag-pymc

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
docs/adr/: 0001-keep-the-core-independent-from-langchain.md  0002-version-source-snapshots-and-content-addressed-artifacts.md  0003-use-jsonl-for-the-local-corpus-baseline.md  0004-use-explicit-bm25-and-versioned-evaluation-artifacts.md  0005-use-pinned-bge-and-exact-cosine-for-the-dense-baseline.md  0006-use-weighted-rrf-before-cross-encoder-reranking.md  0007-evaluate-pinned-ms-marco-cross-encoder-without-adopting-it.md  0008-define-deterministic-context-construction.md  0009-fail-closed-with-a-conservative-no-threshold-evidence-policy.md  0010-separate-versioned-repository-code-from-documentation.md  0011-evaluate-gold-evidence-before-calibrating-abstention.md  0012-normalize-versioned-notebook-inputs-without-execution-outputs.md
docs/architecture/: overview.md
docs/corpus/: pymc-source-selection.md
docs/evaluation/: notebook-bm25-development.md  phase2-sparse-baseline.md  phase3-dense-baseline.md  phase4-hybrid-baseline.md  phase5-annotation-corpus-freeze-v1.md  phase5-development-annotation-guidelines-v1.md  repository-code-bm25-baseline.md
reports/evaluation/: notebook-bm25-development.json  phase2-bm25-baseline.json  phase3-dense-baseline.json  phase3-sparse-vs-dense.json  phase4-bm25-expanded.json  phase4-bm25-vs-hybrid.json  phase4-cross-encoder-reranked.json  phase4-dense-expanded.json  phase4-dense-vs-hybrid.json  phase4-hybrid-reranker-control.json  (+4 more)
scripts/: snapshot_pymc_repository.py
tests/: conftest.py  factories.py
(+198 files in other folders)
